[package]
name = "cyber_scout"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "High-performance cybersecurity reconnaissance tool"
license = "MIT"
repository = "https://github.com/jailkrak/SENTINEL.git"

[dependencies]

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "socks", "cookies"] }

# CLI parsing
clap = { version = "4.4", features = ["derive", "env", "cargo"] }

# Progress & UI
indicatif = "0.17"
console = { version = "0.15", features = ["ansi-parsing"] }
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# DNS (KEEP ONLY ONE - IMPORTANT FIX)
hickory-resolver = "0.24"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
url = "2.5"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional proxy (kept but safe)
hyper = { version = "0.14", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
tempfile = "3.9"

[[bench]]
name = "scanner_bench"
harness = false

[features]
default = []
full = []
proxy = ["hyper"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"